# MeshVerify

./: .gitignore  CMakeLists.txt  MeshLoader.cpp  MeshLoader.hpp  MeshTopology.cpp  MeshVerifier.cpp  MeshVerifier.hpp  Predicates.cpp  Predicates.hpp  README.md  UserGuide.md  main.cpp  python_bindings.cpp
cli/: main.cpp
include/mesh_verify/: Mesh.hpp  MeshTopology.hpp
python/: python_bindings.cpp
src/: MeshLoader.cpp  MeshTopology.cpp  MeshVerifier.cpp  Predicates.cpp
tests/: functional_tests.cpp  integration_tests.cpp  unit_tests.cpp
